--- a/css/style3.css
+++ b/css/style3.css
@@ -1,18 +1,16 @@
-.table {
+table {
+  border-collapse: collapse;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 1280px;
 }
-table {
-  border-collapse: collapse;
-}
-td {
+td, th {
   border-bottom: 1px solid lightgray ;
   width: 225px;
   height: 50px;
 }
-th{
+thead{
   text-align: left;
 }
 .but1, .but2 {
@@ -56,7 +54,7 @@ p {
 a{
   text-decoration: none;
   display: block;
-  margin-left: 500px;
+  margin-left: 600px;
   color: red;
   font-size: 18pt;
   font-style: italic;
@@ -68,10 +66,14 @@ a{
   border: 2px solid lightgray;
   border-radius: 12px 12px 12px 12px;
   box-shadow: 0 0 5px 2px lightgray;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .wrap {
   border-right: solid 6px lightgray;
-  padding-right: 20px;
+  padding-right: 25px;
+  margin-right: 50px;
 }
 .cross{
   margin-left: 1385px;
